--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vue-admin-template",
-  "version": "3.6.0",
-  "license": "MIT",
-  "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
+  "name": "box-ui",
+  "version": "1.0.0",
+  "description": "A Vue.js project",
+  "author": "",
+  "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "axios": "0.17.1",
+    "echarts": "^4.1.0",
     "element-ui": "2.3.4",
     "js-cookie": "2.2.0",
+    "node-sass": "^4.9.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "vue": "2.5.10",
+    "vue-count-to": "^1.0.13",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
@@ -46,7 +49,6 @@
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "2.30.1",
     "node-notifier": "5.1.2",
-    "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "portfinder": "1.0.13",
@@ -69,7 +71,7 @@
     "webpack-merge": "4.1.1"
   },
   "engines": {
-    "node": ">= 4.0.0",
+    "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
   "browserslist": [
